fixed bad namespacing

--- a/stylesheets/cv.scss
+++ b/stylesheets/cv.scss
@@ -118,16 +118,6 @@ h1, h2, h3, h4 {
   }
 }
 
-.flexbox {
-  display: flex;
-  align-content: center;
-  align-items:  center;
-  gap: 25px;
-  &.-nogap {
-    gap: 0;
-  }
-}
-
 .-gray {
   background-color: #eee;
 }
